--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,12 @@ button {
     font-family: monospace;
     border: none;
     border-radius: 5px;
-    background-color: lime;
+    background-color: crimson;
     color: white;
     cursor: pointer;
+}
+#submit {
+    background-color: lime;
 }
 
 #key {
